implement mail service

--- a/mail_service/src/main/resources/application.properties
+++ b/mail_service/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+email.sender.host=smtp.gmail.com
+email.sender.port=587
+email.sender.username=chilingaryanara96@gmail.com
+email.sender.password=ara199602
+email.transport.protocol=smtp
+email.smtp.auth=true
+email.smtp.starttls.enable=true
+email.debug=false
+email.from.address=chilingaryanara96@gmail.com
+server.port=8085
