--- a/mail_service/build.gradle
+++ b/mail_service/build.gradle
@@ -18,7 +18,8 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.5.6'
     implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
 
-
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 }
 
 test {
