--- a/interview_flow_service/build.gradle
+++ b/interview_flow_service/build.gradle
@@ -13,10 +13,15 @@ repositories {
 }
 
 dependencies {
+//    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.2.0.Final'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 }
 
 test {
