--- a/calendly_service/src/main/resources/interview.properties
+++ b/calendly_service/src/main/resources/interview.properties
@@ -1,2 +1,2 @@
-interview.url=http://localhost:8087
-interview.path=/addEvent
+interview.url=http://e7e3-78-109-72-144.ngrok.io/
+interview.path=/interview
