--- a/interview_flow_service/build.gradle
+++ b/interview_flow_service/build.gradle
@@ -18,7 +18,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     runtimeOnly 'org.postgresql:postgresql'
+    testImplementation "com.h2database:h2"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
