--- a/interview_flow_service/src/main/resources/application.properties
+++ b/interview_flow_service/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.jpa.properties.hibernate.current_session_context_class=org.springframewor
 logging.level.root=warn
 logging.level.com.disqo.interview_flow_service=trace
 logging.file.name=${user.home}/Documents/interviewFlow.log
+
+interview.flow.passing.threshold=50
+interview.flow.addEvent.selectedResponse=Interview date successfully added
+interview.flow.addEvent.rejectedResponse=talent didn't select any time
+
+interview.flow.mail.client.baseUrl=http://7252-78-109-72-144.ngrok.io
+interview.flow.mail.client.path=/send
