--- a/authentication_service/build.gradle
+++ b/authentication_service/build.gradle
@@ -13,12 +13,16 @@ repositories {
 }
 
 dependencies {
+    implementation group: 'com.auth0', name: 'java-jwt', version: '3.18.2'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+
 }
 
 test {
