--- a/authentication_service/src/main/resources/application.properties
+++ b/authentication_service/src/main/resources/application.properties
@@ -1,1 +1,29 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/user_db?currentSchema=user_db
+spring.datasource.username=postgres
+spring.datasource.password=123456
+spring.datasource.driverClassName = org.postgresql.Driver
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.datasource.initialize=true
+app.jwt-header=Authorization
+app.auth.tokenSecret: 926D96C90030DD58429D2751AC1BDBBC
+app.auth.tokenExpirationMsec: 864000000
+spring.security.filter.order=10
+
+
+
+
+
+
+
+
+
+
+
+
+
 
