--- a/onboarding_flow_service/src/main/resources/jira.properties
+++ b/onboarding_flow_service/src/main/resources/jira.properties
@@ -1,5 +1,6 @@
 jira.uri=https://talentjourney.atlassian.net/rest/api/2
 jira.template-key=com.atlassian.jira-core-project-templates:jira-core-simplified-process-control
 jira.uri-project=https://your-domain.atlassian.net/rest/api/2/project
-jira.myAccessToken=xGVoj9uH4bL4McNT66zB8006
+jira.myAccessToken=3QNbIAuN5a5943yDoDR1B0D9
 jira.username=hi.talentjourney@gmail.com
+jira.sprint_url= https://talentjourney.atlassian.net/rest/agile/1.0/sprint
