--- a/onboarding_flow_service/src/main/resources/jira.properties
+++ b/onboarding_flow_service/src/main/resources/jira.properties
@@ -1,6 +1,7 @@
 jira.uri=https://talentjourney.atlassian.net/rest/api/2
 jira.template-key=com.atlassian.jira-core-project-templates:jira-core-simplified-process-control
-jira.uri-project=https://your-domain.atlassian.net/rest/api/2/project
-jira.myAccessToken=3QNbIAuN5a5943yDoDR1B0D9
+jira.myAccessToken=Va1Nf0gJrWn1pawqsvPs4682
 jira.username=hi.talentjourney@gmail.com
-jira.sprint_url= https://talentjourney.atlassian.net/rest/agile/1.0/sprint
+jira.sprintUri= https://talentjourney.atlassian.net/rest/agile/1.0/sprint
+jira.projectBoardUri=https://talentjourney.atlassian.net/rest/agile/1.0/board
+jira.projectUri=https://talentjourney.atlassian.net/rest/api/2/project
