--- a/interview_flow_service/src/main/resources/application.properties
+++ b/interview_flow_service/src/main/resources/application.properties
@@ -16,5 +16,5 @@ interview.flow.passing.threshold=50
 interview.flow.addEvent.selectedResponse=Interview date successfully added
 interview.flow.addEvent.rejectedResponse=talent didn't select any time
 
-interview.flow.mail.client.baseUrl=http://7252-78-109-72-144.ngrok.io
-interview.flow.mail.client.path=/send
+interview.flow.mail.client.baseUrl=http://463b-78-109-72-144.ngrok.io
+interview.flow.mail.client.path=/sendEmail
