--- a/interview_flow_service/build.gradle
+++ b/interview_flow_service/build.gradle
@@ -17,11 +17,11 @@ dependencies {
     implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.2.0.Final'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation "com.h2database:h2"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-
+    
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 }
