--- a/onboarding_flow_service/src/main/resources/application.properties
+++ b/onboarding_flow_service/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 spring.jpa.open-in-view=true
+jwt.secret=mySecret
+jwt.header=Authorization
 #server.port=8083
