--- a/onboarding_flow_service/src/main/resources/application.properties
+++ b/onboarding_flow_service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=0204
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 spring.jpa.open-in-view=true
