--- a/onboarding_flow_service/src/main/resources/application.properties
+++ b/onboarding_flow_service/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialec
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 spring.jpa.open-in-view=true
 #server.port=8083
+
+
+onboarding.mail.client.baseUrl=http://463b-78-109-72-144.ngrok.io
+onboarding.mail.client.path=/sendEmail
