--- a/onboarding_flow_service/src/main/resources/jira.properties
+++ b/onboarding_flow_service/src/main/resources/jira.properties
@@ -1,7 +1,8 @@
 jira.uri=https://talentjourney.atlassian.net/rest/api/2
 jira.template-key=com.atlassian.jira-core-project-templates:jira-core-simplified-process-control
-jira.myAccessToken=Wl5mt2S88pWumwBw9zfJ2522
+jira.myAccessToken=ykH3LUFRYWXeecU2SUCN864B
 jira.username=hi.talentjourney@gmail.com
 jira.sprintUri= https://talentjourney.atlassian.net/rest/agile/1.0/sprint
 jira.projectBoardUri=https://talentjourney.atlassian.net/rest/agile/1.0/board
 jira.projectUri=https://talentjourney.atlassian.net/rest/api/2/project
+jira.projectTemplateKey=com.pyxis.greenhopper.jira:gh-simplified-agility-scrum
