--- a/onboarding_flow_service/build.gradle
+++ b/onboarding_flow_service/build.gradle
@@ -16,10 +16,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    testImplementation 'org.awaitility:awaitility:3.1.2'
 
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
 
 
     compileOnly 'org.projectlombok:lombok'
