changed connection type with journey client,code cleanup

--- a/interview_flow_service/src/main/resources/application.properties
+++ b/interview_flow_service/src/main/resources/application.properties
@@ -17,5 +17,8 @@ interview.flow.addEvent.selectedResponse=Interview date successfully added
 interview.flow.addEvent.rejectedResponse=talent didn't select any time
 
 
-interview.flow.mail.client.baseUrl=http://463b-78-109-72-144.ngrok.io
-interview.flow.mail.client.path=/sendEmail
+interview.flow.mail.client.baseUrl=https://101e-78-109-72-144.ngrok.io
+interview.flow.mail.client.path=/sendEmail/html
+
+interview.flow.journey.client.baseUrl=http://d86c-78-109-72-144.ngrok.io
+interview.flow.journey.client.path=/flowmanager
