--- a/interview_flow_service/src/test/resources/application.properties
+++ b/interview_flow_service/src/test/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:h2:mem:postgres
+spring.datasource.url=jdbc:h2:mem:h2
 spring.datasource.username=postgres
 spring.datasource.password=12345
 
 spring.datasource.driverClassName = org.h2.Driver
 spring.jpa.show-sql = true
-
+management.endpoints.web.exposure.include=*
 
 interview.flow.passing.threshold=50
 interview.flow.addEvent.selectedResponse=Interview date successfully added
