--- a/onboarding_flow_service/build.gradle
+++ b/onboarding_flow_service/build.gradle
@@ -16,10 +16,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'junit:junit:4.13.1'
     testImplementation 'org.awaitility:awaitility:3.1.2'
 
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework:spring-test:5.3.13'
 
 
     compileOnly 'org.projectlombok:lombok'
